# STM32_CO2_LowPowerSensor

./: .gitignore  LICENSE  notes.md
HW/CO2_stm_sensor/: #auto_saved_files#  CO2_stm_sensor.kicad_pcb  CO2_stm_sensor.kicad_prl  CO2_stm_sensor.kicad_pro  CO2_stm_sensor.kicad_sch  CO2_stm_sensor.kicad_sch-bak  _autosave-CO2_stm_sensor.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  wakeup_circuit.kicad_sch  ~CO2_stm_sensor.kicad_sch.lck
HW/CO2_stm_sensor/CO2_stm_sensor-backups/: New_Library_0.bak  New_Library_0.kicad_sym
HW/CO2_stm_sensor/JLC2KiCad_lib/footprint/: BATTERY-SMD_18650-1S-L77.1-W20.7-1.kicad_mod  CONN-TH_4P-P2.00_S4B-PH-K-S-LF-SN.kicad_mod  CONN-TH_6P-P2.00_S6B-PH-K-S-LF-SN.kicad_mod  CRYSTAL-SMD_4P-L2.0-W1.6-BL.kicad_mod  SCD41DR2.kicad_mod  SOT-223-4_L6.5-W3.5-P2.30-LS7.0-BR.kicad_mod  SOT-23-3_L2.9-W1.6-P1.90-LS2.8-BR.kicad_mod  SOT-23-5_L2.9-W1.6-P0.95-LS2.8-BR.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  SOT95P280X145-6N.kicad_mod  TF-SMD_TF-CARD-H1.8.kicad_mod  TYPE-C-SMD_TYPE-C-6P-073.kicad_mod  USB-C-SMD_TYPE-C-6PIN-2MD-073.kicad_mod  pushbutton_EVQPUC02K.kicad_mod
HW/CO2_stm_sensor/JLC2KiCad_lib/footprint/packages3d/: CONN-TH_4P-P2.00_S4B-PH-K-S-LF-SN.step  TYPE-C-SMD_TYPE-C-6P-073.step
HW/CO2_stm_sensor/JLC2KiCad_lib/symbol/: AMS1117-3_3_C347222.kicad_sym  AO3407A.kicad_sym  JLC.kicad_sym  STM32_CO2.kicad_sym  TF-CARD_H1_8.kicad_sym  TPS7A0228PDBVR.kicad_sym  TYPE-C_6P(073).kicad_sym  USBLC6-2SC6.kicad_sym
HW/CO2_stm_sensor/jlcpcb/: project.db
HW/CO2_stm_sensor/jlcpcb/gerber/: CO2_stm_sensor-CuBottom.gbr  CO2_stm_sensor-CuTop.gbr  CO2_stm_sensor-EdgeCuts.gbr  CO2_stm_sensor-MaskBottom.gbr  CO2_stm_sensor-MaskTop.gbr  CO2_stm_sensor-NPTH.drl  CO2_stm_sensor-PTH.drl  CO2_stm_sensor-SilkBottom.gbr  CO2_stm_sensor-SilkTop.gbr
HW/CO2_stm_sensor/jlcpcb/production_files/: BOM-CO2_stm_sensor.csv  CPL-CO2_stm_sensor.csv
firmware/: .gitignore  CMakeLists.txt  build_log.txt  compile.sh  debug.sh  flash.sh
firmware/include/: bl_jump.h  flash_layout.h  g4_gpio.h  g4_iic.h  main.h  scd4x.hpp  stm32l0xx_hal_conf.h  sys_tick.h
firmware/src/: g4_gpio.c  g4_iic.c  gpio.c  i2c.c  main.c  main.cpp  scd4x.cpp  spi.c  stm32g4xx_it.c  sys_tick.c  usart.c
fw_gen_nucleo/: .mxproject  CMakeLists.txt  fw_gen_nucleo.ioc
fw_gen_nucleo/Core/Inc/: i2c.h  main.h  stm32g4xx_hal_conf.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
fw_gen_nucleo/Core/Src/: gpio.c  i2c.c  main.c  spi.c  stm32l0xx_it.c  usart.c  usb.c
fw_gen_nucleo/Drivers/CMSIS/Device/ST/STM32G4xx/Include/: stm32g474xx.h
fw_gen_nucleo/cmake/stm32cubemx/: CMakeLists.txt
